[gd_scene load_steps=4 format=3 uid="uid://bovpm76u0e6rm"]

[ext_resource type="Script" uid="uid://dnh0gir3e8lcn" path="res://base/bureau/bureaux.gd" id="1_8y8uc"]
[ext_resource type="AudioStream" uid="uid://bfrv64xqgkk1m" path="res://base/bureau/modem_56k.wav" id="2_x1sqf"]
[ext_resource type="AudioStream" uid="uid://djbcaja3qf56c" path="res://base/bureau/claviers.wav" id="3_x1sqf"]

[node name="Bureaux" type="Node2D"]
script = ExtResource("1_8y8uc")

[node name="Modem" type="AudioStreamPlayer2D" parent="."]
position = Vector2(58, 364)
stream = ExtResource("2_x1sqf")
volume_db = -30.0
max_distance = 250.0
attenuation = 2.0

[node name="clavier" type="AudioStreamPlayer2D" parent="."]
position = Vector2(82, 96)
stream = ExtResource("3_x1sqf")
volume_db = -10.0
max_distance = 250.0
attenuation = 2.0

[node name="clavier2" type="AudioStreamPlayer2D" parent="."]
position = Vector2(80, 167)
stream = ExtResource("3_x1sqf")
volume_db = -10.0
max_distance = 250.0
attenuation = 2.0

[node name="clavier3" type="AudioStreamPlayer2D" parent="."]
position = Vector2(78, 229)
stream = ExtResource("3_x1sqf")
volume_db = -10.0
max_distance = 250.0
attenuation = 2.0

[node name="clavier4" type="AudioStreamPlayer2D" parent="."]
position = Vector2(136, 328)
stream = ExtResource("3_x1sqf")
volume_db = -10.0
max_distance = 250.0
attenuation = 2.0

[node name="Modem2" type="AudioStreamPlayer2D" parent="."]
position = Vector2(51, 71)
max_distance = 250.0
attenuation = 2.0
